--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div class="me_img">
 
-          
+
 
             <img src="img/me.jpg.png" width=380vw>
             <div class="me_card">
@@ -165,24 +165,32 @@
                 href="https://play.google.com/store/apps/details?id=com.Skilletron.TapDownTree"> <img src="img/icon.png"
                     width="135vw"></a><br>
             <span>Tap Down Tree</span>
+            <br>
+            <span>Приложение Android</span>
         </div>
         <div class="portfolio_card">
             <a id="a_portfolio" class="portfolio_click"
                 href="https://play.google.com/store/apps/details?id=com.TDM.TapDownTree2"><img src="img/icon_2.png"
                     width="135vw"></a><br>
             <span>Tap Down Tree 2</span>
+            <br>
+            <span>Приложение Android</span>
         </div>
         <div class="portfolio_card">
             <a id="a_portfolio" class="portfolio_click"
                 href="https://play.google.com/store/apps/details?id=com.TDM.CalculatorDarts"><img src="img/icon_3.PNG"
                     width="135vw" height="135vw"></a><br>
             <span>Darts Calculator</span>
+            <br>
+            <span>Приложение Android</span>
         </div>
         <div class="portfolio_card">
             <a id="a_portfolio" class="portfolio_click"
                 href="https://play.google.com/store/apps/details?id=com.Skilletron.TrashMan"><img src="img/icon_4.PNG"
                     width="135vw"></a><br>
             <span>Trash Man</span>
+            <br>
+            <span>Приложение Android</span>
         </div>
 
     </div>
@@ -192,17 +200,18 @@
     <div id="contact" class="container-contact">
         <div class="contact_me_column" id="contact">
             <div class="contact_me">
-                <a target="blank" href="https://vk.com/skilletron" id="contact"><img src="img/vk.png" width="80vw"alt='vk'title="VK"></a>
-                <a target="blank" href="https://wa.me/+79198710661" id="contact"><img src="img/whatsapp.png"
-                        width="80vw"alt='whatsapp'title="Whatsapp"></a>
-                <a target="blank" href="tg://resolve?domain=@username_skilletron" id="contact"><img src="img/tg.png"
-                        width="80vw"alt='telegram'title="Telegram"></a>
-                <a target="blank" href="mailto:forestskilletron@gmail.com" id="contact"><img src="img/gmail.png"
-                        width="80vw"alt='gmail'title="Gmail"></a>
-                <a target="blank" href="https://www.linkedin.com/in/konstantin-volobuev-ab74461b0/" id="contact"><img
-                        src="img/linkedin.png" width="80vw"alt='linkedin' title="Linkedin"></a>
-                        <a target="blank" href="https://github.com/Skilletron" id="contact"><img
-                            src="img/github.png" width="80vw" alt='github' title="Github"></a>
+                <a target="blank" href="https://vk.com/skilletron" id="contact_img"><img src="img/vk.png" width="80vw"
+                        alt='vk' title="VK"></a>
+                <a target="blank" href="https://wa.me/+79198710661" id="contact_img"><img src="img/whatsapp.png"
+                        width="80vw" alt='whatsapp' title="Whatsapp"></a>
+                <a target="blank" href="tg://resolve?domain=@username_skilletron" id="contact_img"><img src="img/tg.png"
+                        width="80vw" alt='telegram' title="Telegram"></a>
+                <a target="blank" href="mailto:forestskilletron@gmail.com" id="contact_img"><img src="img/gmail.png"
+                        width="80vw" alt='gmail' title="Gmail"></a>
+                <a target="blank" href="https://www.linkedin.com/in/konstantin-volobuev-ab74461b0/"
+                    id="contact_img"><img src="img/linkedin.png" width="80vw" alt='linkedin' title="Linkedin"></a>
+                <a target="blank" href="https://github.com/Skilletron" id="contact_img"><img src="img/github.png"
+                        width="80vw" alt='github' title="Github"></a>
             </div>
         </div>
     </div>
