--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
 
-            <img src="img/me.jpg.png" width=380vw>
+            <img src="img/me.jpg.png">
             <div class="me_card">
                 <ul>
                     <br></br>
