--- a/index.html
+++ b/index.html
@@ -48,40 +48,10 @@
 
             <img src="img/me.jpg.png">
             <div class="me_card">
-                <ul>
-                    <br></br>
-                    <li type=none class=li_me_title>
-                        Навыки
-                    </li color="blue">
-                    <li class=li_me_skills>
-                        HTML
-                    </li>
-                    <li class=li_me_skills>
-                        CSS
-                    </li>
-                    <li class=li_me_skills>
-                        Figma
-                    </li>
-                    <li class=li_me_skills>
-                        Adobe Illustrator
-                    </li>
-                    <li class=li_me_skills>
-                        CorelDraw
-                    </li>
-                    <li class=li_me_skills>
-                        Adobe Photoshop
-                    </li>
-                    <li class=li_me_skills>
-                        Adobe Premier Pro
-                    </li>
+                <div class="li_skills">
+                    <img src = "img/skills.svg">
+                </div>
 
-                    <li class=li_me_skills>
-                        Unity
-                    </li>
-                    <li class=li_me_skills>
-                        C#
-                    </li>
-                </ul>
             </div>
 
         </div>
@@ -138,7 +108,8 @@
         </div>
     </div>
     </div>
-    <a href="#" id="toTop"></a>
+
+    <a href="#" id="toTop" ></a>
 
     <div class="container-education">
         <div id="education" class="title_education">
@@ -163,7 +134,7 @@
         <div class="portfolio_card">
             <a id="a_portfolio" class="portfolio_click"
                 href="https://play.google.com/store/apps/details?id=com.Skilletron.TapDownTree"> <img src="img/icon.png"
-                    width="135vw"></a><br>
+                ></a><br>
             <span>Tap Down Tree</span>
             <br>
             <span>Приложение Android</span>
@@ -171,7 +142,7 @@
         <div class="portfolio_card">
             <a id="a_portfolio" class="portfolio_click"
                 href="https://play.google.com/store/apps/details?id=com.TDM.TapDownTree2"><img src="img/icon_2.png"
-                    width="135vw"></a><br>
+                  ></a><br>
             <span>Tap Down Tree 2</span>
             <br>
             <span>Приложение Android</span>
@@ -179,7 +150,7 @@
         <div class="portfolio_card">
             <a id="a_portfolio" class="portfolio_click"
                 href="https://play.google.com/store/apps/details?id=com.TDM.CalculatorDarts"><img src="img/icon_3.PNG"
-                    width="135vw" height="135vw"></a><br>
+           ></a><br>
             <span>Darts Calculator</span>
             <br>
             <span>Приложение Android</span>
@@ -187,7 +158,7 @@
         <div class="portfolio_card">
             <a id="a_portfolio" class="portfolio_click"
                 href="https://play.google.com/store/apps/details?id=com.Skilletron.TrashMan"><img src="img/icon_4.PNG"
-                    width="135vw"></a><br>
+                   ></a><br>
             <span>Trash Man</span>
             <br>
             <span>Приложение Android</span>
@@ -200,18 +171,18 @@
     <div id="contact" class="container-contact">
         <div class="contact_me_column" id="contact">
             <div class="contact_me">
-                <a target="blank" href="https://vk.com/skilletron" id="contact_img"><img src="img/vk.png" width="80vw"
+                <a target="blank" href="https://vk.com/skilletron" id="contact_img"><img src="img/vk.png"
                         alt='vk' title="VK"></a>
                 <a target="blank" href="https://wa.me/+79198710661" id="contact_img"><img src="img/whatsapp.png"
-                        width="80vw" alt='whatsapp' title="Whatsapp"></a>
+                      alt='whatsapp' title="Whatsapp"></a>
                 <a target="blank" href="tg://resolve?domain=@username_skilletron" id="contact_img"><img src="img/tg.png"
-                        width="80vw" alt='telegram' title="Telegram"></a>
+                       alt='telegram' title="Telegram"></a>
                 <a target="blank" href="mailto:forestskilletron@gmail.com" id="contact_img"><img src="img/gmail.png"
-                        width="80vw" alt='gmail' title="Gmail"></a>
+                        alt='gmail' title="Gmail"></a>
                 <a target="blank" href="https://www.linkedin.com/in/konstantin-volobuev-ab74461b0/"
                     id="contact_img"><img src="img/linkedin.png" width="80vw" alt='linkedin' title="Linkedin"></a>
                 <a target="blank" href="https://github.com/Skilletron" id="contact_img"><img src="img/github.png"
-                        width="80vw" alt='github' title="Github"></a>
+                       alt='github' title="Github"></a>
             </div>
         </div>
     </div>
