--- a/index.html
+++ b/index.html
@@ -104,7 +104,10 @@
             <div class="greyProgress_8">
                 <div class="bar_8"></div>
             </div>
-
+            <span class="skill">JS</span>
+            <div class="greyProgress_9">
+                <div class="bar_9"></div>
+            </div>
         </div>
     </div>
     </div>
