--- a/index.html
+++ b/index.html
@@ -1,214 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords"  content="Константин Волобуев,username_skilletron,skilletron,+79198710661,89198710661">
-    <meta name="author"  content="Константин Волобуев"> 
-    <meta name="description"  content="Просто хороший человек"> 
-    <title>Константин Волобуев - сайт визитка</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/bar.css">
-    <link rel="stylesheet" href="css/education.css">
-    <link rel="stylesheet" href="css/portfolio.css">
-    <link rel="stylesheet" href="css/contact.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="js/jquery.scrollTo.js"></script>
-</head>
-
-<body>
-    <header class="header">
-        <div class=content_header>
-
-            <div class="logo_header">
-                <a href="#"><span class="header_text_name">КВ</span></a>
-            </div>
-
-            <div class="info_header">
-                <span class="header_text_name">Я Константин Волобуев
-                    <p class="header_text_spec">Техник-программист</p>
-                    <p><button class="hire_btn" onclick="location.href='mailto:forestskilletron@gmail.com'">Найми
-                            меня</button></p>
-                </span>
-            </div>
-
-            <div class=nav_header>
-                <a id="scroll_about" class="left-menu" href="#about_me">Обо мне</a>
-                <a id="scroll_skills" class="left-menu" href="#skills">Навыки</a>
-                <a id="scroll_education" class="left-menu" href="#education">Образование</a>
-                <a id="scroll_portfolio" class="left-menu" href="#portfolio">Портфолио</a>
-                <a id="scroll_contact" class="left-menu" href="#contact">Контакты</a>
-
-            </div>
-
-
-    </header>
-
-    <div class="main-container" id="about_me">
-
-        <div class="me_img">
-
-
-
-            <img src="img/me.jpg.png">
-            <div class="me_card">
-                <div class="li_skills">
-                    <img src="img/skills.svg">
-                </div>
-
-            </div>
-
-        </div>
-        <div id="skills" class="me_info">
-            <span class="me_info_title">Константин Волобуев</span>
-            <br></br>
-            <br><span class="me_info_description">C ранних лет заинтересовался программированием,
-                впервые начал разрабатывать мобильные приложения на C# в 15 лет, после 2 лет обучения
-                набрался опыта и смог сделал свое первое коммерческое приложение для платформы Android ,
-                которое было опубликован в Play Market,на данный момент развиваюсь в отрасли WEB
-                ,имею базовые знания html,css,flexbox,js,есть опыт работы с Git. Мне также пришлось изучить основы UI/UX
-                при
-                разработке игр.Также можно отметить,что во время учебы в колледже
-                я изучил основы проектирования и создания баз данных с помощью PHPmyAdmin,SQL запросов к
-                базе данных. На данный момент живу в России, но при необходимости готов переехать в другие
-                страны </span><br>
-            <br></br>
-            <span class="skill" id="skills">HTML</span>
-            <div class="greyProgress_0">
-                <div class="bar_0"></div>
-            </div>
-            &nbsp;
-            <span class="skill">CSS</span>
-            <div class="greyProgress_1">
-                <div class="bar_1"></div>
-            </div>
-            &nbsp;
-            <span class="skill">Figma</span>
-            <div class="greyProgress_2">
-                <div class="bar_2"></div>
-            </div>
-            &nbsp;
-            <span class="skill"> Adobe Illustrator</span>
-            <div class="greyProgress_3">
-                <div class="bar_3"></div>
-            </div>
-            &nbsp;
-            <span class="skill">CorelDraw</span>
-            <div class="greyProgress_4">
-                <div class="bar_4"></div>
-            </div>
-            &nbsp;
-            <span class="skill">Adobe Photoshop</span>
-            <div class="greyProgress_5">
-                <div class="bar_5"></div>
-            </div>
-            &nbsp;
-            <span class="skill">Adobe Premier Pro</span>
-            <div class="greyProgress_6">
-                <div class="bar_6"></div>
-            </div>
-            &nbsp;
-            <span class="skill">Unity</span>
-            <div class="greyProgress_7">
-                <div class="bar_7"></div>
-            </div>
-            &nbsp;
-            <span class="skill">C#</span>
-            <div class="greyProgress_8">
-                <div class="bar_8"></div>
-            </div>
-            &nbsp;
-            <span class="skill">JS</span>
-            <div class="greyProgress_9">
-                <div class="bar_9"></div>
-            </div>
-        </div>
-    </div>
-    </div>
-
-    <a href="#" id="toTop"></a>
-
-    <div class="container-education">
-        <div id="education" class="title_education">
-            <span>Образование</span>
-        </div>
-        <div class="text-container-education">
-            <img class="picture_education" src="img/education.png" height="80vw" width="80vw">
-            <span class=text_education>Неполное среднее образование<br>
-                <span>2009-2018</span></span>
-
-            <img class="picture_education" src="img/education.png" height="80vw" width="80vw">
-            <span class=text_education>Ростовский-на-дону колледж связи и информатики<br>
-                <span>2018-2022</span><br>
-                <span>Техник-программист</span>
-            </span>
-        </div>
-    </div>
-    <div class="title_portfolio" id="portfolio">
-        <span>Портфолио</span>
-    </div>
-    <div id="portfolio" class="container-portfolio">
-        <div class="portfolio_card">
-            <a id="a_portfolio" class="portfolio_click"
-                href="https://play.google.com/store/apps/details?id=com.Skilletron.TapDownTree"> <img
-                    src="img/icon.png"></a><br>
-            <span>Tap Down Tree</span>
-            <br>
-            <span>Приложение Android</span>
-        </div>
-        <div class="portfolio_card">
-            <a id="a_portfolio" class="portfolio_click"
-                href="https://play.google.com/store/apps/details?id=com.TDM.TapDownTree2"><img
-                    src="img/icon_2.png"></a><br>
-            <span>Tap Down Tree 2</span>
-            <br>
-            <span>Приложение Android</span>
-        </div>
-        <div class="portfolio_card">
-            <a id="a_portfolio" class="portfolio_click"
-                href="https://play.google.com/store/apps/details?id=com.TDM.CalculatorDarts"><img
-                    src="img/icon_3.PNG"></a><br>
-            <span>Darts Calculator</span>
-            <br>
-            <span>Приложение Android</span>
-        </div>
-        <div class="portfolio_card">
-            <a id="a_portfolio" class="portfolio_click"
-                href="https://play.google.com/store/apps/details?id=com.Skilletron.TrashMan"><img
-                    src="img/icon_4.PNG"></a><br>
-            <span>Trash Man</span>
-            <br>
-            <span>Приложение Android</span>
-        </div>
-
-    </div>
-    <div class="title_contact_me">
-        <span>Контакты для связи</span>
-    </div>
-    <div id="contact" class="container-contact">
-        <div class="contact_me_column" id="contact">
-            <div class="contact_me">
-                <a target="blank" href="https://vk.com/skilletron" id="contact_img"><img src="img/vk.png" alt='vk'
-                        title="VK"></a>
-                <a target="blank" href="https://wa.me/+79198710661" id="contact_img"><img src="img/whatsapp.png"
-                        alt='whatsapp' title="Whatsapp"></a>
-                <a target="blank" href="tg://resolve?domain=@username_skilletron" id="contact_img"><img src="img/tg.png"
-                        alt='telegram' title="Telegram"></a>
-                <a target="blank" href="mailto:forestskilletron@gmail.com" id="contact_img"><img src="img/gmail.png"
-                        alt='gmail' title="Gmail"></a>
-                <a target="blank" href="https://www.linkedin.com/in/konstantin-volobuev-ab74461b0/"
-                    id="contact_img"><img src="img/linkedin.png" width="80vw" alt='linkedin' title="Linkedin"></a>
-                <a target="blank" href="https://github.com/Skilletron" id="contact_img"><img src="img/github.png"
-                        alt='github' title="Github"></a>
-            </div>
-        </div>
-    </div>
-    <script type="text/javascript" src="js/smooth.js">
-    </script>
-</body>
-
-</html>
+<!doctype html><html lang="en" style="background-color:#212529"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><link href="/static/css/2.0a9ec390.chunk.css" rel="stylesheet"><link href="/static/css/main.00d60d33.chunk.css" rel="stylesheet"></head><body style="background-color:#212529"><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function t(t){for(var n,l,i=t[0],f=t[1],a=t[2],p=0,s=[];p<i.length;p++)l=i[p],Object.prototype.hasOwnProperty.call(o,l)&&o[l]&&s.push(o[l][0]),o[l]=0;for(n in f)Object.prototype.hasOwnProperty.call(f,n)&&(e[n]=f[n]);for(c&&c(t);s.length;)s.shift()();return u.push.apply(u,a||[]),r()}function r(){for(var e,t=0;t<u.length;t++){for(var r=u[t],n=!0,i=1;i<r.length;i++){var f=r[i];0!==o[f]&&(n=!1)}n&&(u.splice(t--,1),e=l(l.s=r[0]))}return e}var n={},o={1:0},u=[];function l(t){if(n[t])return n[t].exports;var r=n[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports,r,r.exports,l),r.l=!0,r.exports}l.m=e,l.c=n,l.d=function(e,t,r){l.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},l.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},l.t=function(e,t){if(1&t&&(e=l(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(l.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var n in e)l.d(r,n,function(t){return e[t]}.bind(null,n));return r},l.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return l.d(t,"a",t),t},l.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},l.p="/";var i=this.webpackJsonpnuget_client=this.webpackJsonpnuget_client||[],f=i.push.bind(i);i.push=t,i=i.slice();for(var a=0;a<i.length;a++)t(i[a]);var c=f;r()}([])</script><script src="/static/js/2.61b84187.chunk.js"></script><script src="/static/js/main.3433c2d5.chunk.js"></script></body></html>
